# HeidelbergInstrumentsNano

./: .gitignore  README.md  pyproject.toml  setup.bat
app/: CMakeLists.txt  FolderMacros.txt
app/lib/: CMakeLists.txt  Context.cpp  Context.h  GlobalData.cpp  GlobalData.h  HINResource.rc  Status.h  resource.h
app/lib/src/: IContext.h  IImporter.h  Importer.cpp  Importer.h  Splitter.cpp  Splitter.h
app/lib/swig/: CMakeLists.txt  HIN.i
app/lib/swig/python/: CMakeLists.txt  project.vcxproj.user.in  setup.py.in
app/py/: hin_lib.py  importer_widget.py  main_window.py
resources/: numbers_letters_2d.tif
